<resources>
    <string name="app_name">SmartQue</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="log_in">Log In</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="profile_image">profile image</string>
    <string name="withdraw_image">Withdraw image</string>
    <string name="withdraw">Withdraw</string>
    <string name="insurance">Insurance</string>
    <string name="inquiries">Inquiries</string>
    <string name="open_account">Open Account</string>
    <string name="loans">Loans</string>
    <string name="deposit">Deposit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="floating">Floating</string>
    <string name="hi">Good %s, %s</string>
    <string name="edit">Edit</string>
    <string name="general">General</string>
    <string name="general_icon">general icon</string>
    <string name="notifications_icon">notifications icon</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode_icon">dark mode icon</string>
    <string name="dark_mode">DarkMode</string>
    <string name="others">Others</string>
    <string name="settings_icon">Settings icon</string>
    <string name="contact_us_icon">Contact us icon</string>
    <string name="contact_us">Contact us</string>
    <string name="logout_icon">logout icon</string>
    <string name="log_out">Log Out</string>
    <string name="que_in">You\'re in  %s Queue</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="call_text">Call to speak to one of our \n customer care agents</string>
    <string name="ticket_number">Ticket Number :</string>
    <string name="number_in_queue">Number in Queue:</string>
    <string name="_4">4</string>
    <string name="approximate_time_in_queue">Approximate time in Queue :</string>
    <string name="_10">10</string>
    <string name="cancel">Cancel</string>
    <string name="_100b">100B</string>
    <string name="cheers">Cheers</string>
    <string name="profile_picture">profile picture</string>
    <string name="users_image">users Image</string>
    <string name="geofences">Geofences</string>
    <string name="maps_image">Maps image</string>
    <string name="report_image">Report image</string>
    <string name="reports">Reports</string>
    <string name="forum_image">Forum Image</string>
    <string name="open_forum">Open Forum</string>
    <string name="person_icon">person Icon</string>
    <string name="call_button">call_button</string>
    <string name="send_message_btn">send_message_btn</string>
    <string name="send_message">Send Message</string>
    <string name="users">Users</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">latitude</string>
    <string name="add_on_map_instead">Use map instead?</string>
    <string name="map">Map</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="call_or_send_message">Call or Send Message</string>
</resources>