<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.smartque.MainActivity">

    <item
        android:id="@+id/HomeFragment"
        android:title="@string/home"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_home_24"/>
<item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        app:showAsAction="never"
        android:icon="@drawable/profile"/>
<item
        android:id="@+id/supportFragment"
        android:title="@string/support"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_contact_support_24"/>


    <item
        android:id="@+id/settingsFragment"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>