<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="24sp"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="@dimen/normal_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="24sp"
            android:layout_marginEnd="@dimen/normal_spacing"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_constraint_layout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_spacing"
                android:layout_marginEnd="@dimen/normal_spacing"
                android:layout_marginTop="@dimen/normal_spacing"
                app:cardElevation="@dimen/small_spacing"
                app:cardCornerRadius="@dimen/small_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profile_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        tools:src="@drawable/profile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/profile_image"/>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_spacing"
                        tools:text="Name Placeholder"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/profile_img"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_spacing"
                        tools:text="placeholder@gmail.com"
                        app:layout_constraintStart_toStartOf="@+id/profile_name"
                        app:layout_constraintStart_toEndOf="@+id/profile_img"
                        app:layout_constraintTop_toBottomOf="@+id/profile_name" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                app:cardElevation="@dimen/small_spacing"
                app:cardCornerRadius="@dimen/small_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_card_view"
            >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/general_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/general"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/menu_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_apps_24"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/general_tv"
                        android:contentDescription="@string/general_icon"/>
                    <TextView
                        android:id="@+id/menu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/general"
                        android:layout_marginTop="@dimen/normal_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/menu_image"
                        app:layout_constraintTop_toTopOf="@+id/menu_image"/>

                    <ImageView
                        android:id="@+id/notifications_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/notifications_icon"
                        app:srcCompat="@drawable/ic_baseline_circle_notifications_24"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menu_image"/>
                    <TextView
                        android:id="@+id/notifications_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications"
                        android:layout_marginTop="@dimen/normal_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/notifications_image"
                        app:layout_constraintTop_toTopOf="@+id/notifications_image"/>

                    <ImageView
                        android:id="@+id/dark_mode_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/dark_mode_icon"
                        app:srcCompat="@drawable/ic_baseline_dark_mode_24"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/notifications_image"/>
                    <TextView
                        android:id="@+id/dark_mode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode"
                        android:layout_marginTop="@dimen/normal_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/dark_mode_image"
                        app:layout_constraintTop_toTopOf="@+id/dark_mode_image"/>
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/dark_mode_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/normal_spacing"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/dark_mode_text"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_spacing"
                app:cardCornerRadius="@dimen/small_spacing"
                app:cardElevation="@dimen/small_spacing"
                android:layout_marginEnd="@dimen/normal_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_general">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/others_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/settings_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_icon"
                        app:srcCompat="@drawable/ic_baseline_settings_24"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/others_tv"/>
                    <TextView
                        android:id="@+id/settings_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_settings"
                        android:layout_marginTop="@dimen/normal_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/settings_image"
                        app:layout_constraintTop_toTopOf="@+id/settings_image"/>
                    <ImageView
                        android:id="@+id/contact_us_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/contact_us_icon"
                        app:srcCompat="@drawable/ic_baseline_contact_support_24"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/settings_image"/>
                    <TextView
                        android:id="@+id/contact_us_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:layout_marginTop="@dimen/normal_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/contact_us_image"
                        app:layout_constraintTop_toTopOf="@+id/contact_us_image"/>
                    <ImageView
                        android:id="@+id/logout_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/logout_icon"
                        app:srcCompat="@drawable/baseline_logout_24"
                        android:layout_marginStart="@dimen/normal_spacing"
                        android:layout_marginTop="@dimen/normal_spacing"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/contact_us_image"/>
                    <TextView
                        android:id="@+id/logout_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_out"
                        android:layout_marginTop="@dimen/normal_spacing"
                        android:layout_marginStart="@dimen/normal_spacing"
                        app:layout_constraintStart_toEndOf="@+id/logout_image"
                        app:layout_constraintTop_toTopOf="@+id/logout_image"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>